# AISchool-auth

./: .gitignore  README.md  app.py  main.py  manage.py  pyproject.toml  r.txt
api/: index.py  urls.py
api/admin/: __init__.py  chain.py  login_event.py  refresh_token.py  user.py  verification_code.py
api/migrations/: 0001_initial.py  0002_alter_loginevent_options_alter_refreshtoken_options_and_more.py  0003_alter_refreshtoken_options_and_more.py  0004_alter_verificationcode_purpose.py
api/models/: __init__.py  chain.py  login_event.py  refresh_token.py  user.py  verification_code.py
api/serializers/: __init__.py  errors.py
api/serializers/auth/: __init__.py  login.py  oauth.py  signup.py
api/serializers/fields/: __init__.py  code.py  email.py  password.py
api/serializers/token/: __init__.py  access.py  refresh.py  tokens.py
api/serializers/user/: __init__.py  default.py  email.py  password.py
api/serializers/verification/: __init__.py  restore.py  verification_required.py  verify_code.py
api/views/: __init__.py
api/views/auth/: __init__.py  login.py  oauth.py  signup.py
api/views/helpers/: __init__.py  check_oauth2_token.py  (+2 more)
core/: __init__.py  asgi.py  auth_schema.py  database.py  dependencies.py  localization.py  middleware.py  rsa_keys.py  settings.py  wsgi.py
models/: __init__.py  database.py  models.py
models/shortcuts/: __init__.py  refresh_token.py  user.py  verification_code.py
routers/: __init__.py  auth.py  jwks.py  preview.py  refresh.py  restore.py  verify.py  worker.py
schemas/: __init__.py  auth.py  jwks.py  refresh.py  restore.py  schemas.py  token.py  validators.py  verification.py
schemas/errors/: __init__.py  errors.py  exceptions.py
services/: apps.py  urls.py
services/migrations/: 0001_initial.py  0002_remove_service_dev_host_remove_service_prod_host.py  0003_delete_service.py
services/models/: __init__.py  client.py  service.py  service_storage.py
services/serializers/: __init__.py  create_bulk_users.py  generate_token.py  service_token.py  verification_email.py
services/views/: __init__.py
templates/: verify_email.html
templates/emails/: base.html
utils/: __init__.py  current_user.py  email.py  email_utils.py  exception_handlers.py  jwt_utils.py  oauth2.py  token_storage.py
utils/jwt/: __init__.py  create.py  rsa_keys.py  verify.py
(+33 files in other folders)
