[project]
name = "auth"
version = "0.1.0"
description = "Flask Authentication API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "sqlalchemy>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.1.0",
    "werkzeug>=3.0.0",
    "jinja2>=3.1.0",
    "requests>=2.31.0",
    "marshmallow>=3.20.0",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
    "flasgger>=0.9.7",
]

disable = [
    "invalid-name",
    "missing-docstring",
    "bad-indentation",
    "line-too-long",
]

enable = [
    "all",
]

confidence = "HIGH"

ignore-paths = [
    "migrations",
    "venv",
    ".venv",
    "node_modules",
    "__pycache__",
    ".*\\.pyc$",
]