[project]
name = "auth"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  "migrations",
  "venv",
  ".venv",
  "node_modules",
  "__pycache__",
  "*.pyc"
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort (imports)
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "DJ",  # django rules
]

ignore = [
  "N801",  # invalid function name
  "D100",  # missing docstring in module
  "E501"   # line too long
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.django-stubs]
django_settings_module = "core.settings"

